--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "bootstrap": "^5.3.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
