--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0",
-    "vue": "^3.5.12"
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
